--- a/data/all.css
+++ b/data/all.css
@@ -23,12 +23,6 @@
   color: white;
   width: 30px;
 }
-.redpoint {
-  position: absolute;
-  text-align: center;
-  color: white;
-  width: 30px;
-}
 .inventory {
   position: relative;
   width: 323px;
@@ -45,6 +39,11 @@
 .green {
   text-align: center;
   color: #00f000;
+}
+.green_name {
+  text-align: center;
+  color: #00f000;
+  font-weight: bold;
 }
 .gray {
   color: gray;
@@ -85,30 +84,9 @@ li a:hover {
 }
 .show {display: block;}
 
-.S {
-  position: absolute;
-  display: block;
-  pointer-events: none;
-  z-index: 3;
-}
-.Sa1 {left: 14px;}
-.Sa2 {left: 83px;}
-.Sa3 {left: 152px;}
-.Sb1 {left: 245px;}
-.Sb2 {left: 314px;}
-.Sb3 {left: 383px;}
-.Sc1 {left: 476px;}
-.Sc2 {left: 545px;}
-.Sc3 {left: 614px;}
-.Sy1 {top: 16px;}
-.Sy2 {top: 84px;}
-.Sy3 {top: 152px;}
-.Sy4 {top: 220px;}
-.Sy5 {top: 289px;}
-.Sy6 {top: 357px;}
-
 .P {  position: absolute;
   text-align: center;
+  text-shadow: 1px 1px 2px black, -1px -1px 2px black, 1px -1px 2px black, -1px 1px 2px black, 2px 2px 3px black, -2px -2px 3px black, 2px -2px 3px black, -2px 2px 3px black;
   color: white;
   width: 30px;
   z-index: 4;
@@ -128,6 +106,28 @@ li a:hover {
 .Py4 {top: 248px;}
 .Py5 {top: 317px;}
 .Py6 {top: 385px;}
+
+.I {
+  position: absolute;
+  display: block;
+  pointer-events: none;
+  z-index: 3;
+}
+.Ia1 {left: 14px;}
+.Ia2 {left: 83px;}
+.Ia3 {left: 152px;}
+.Ib1 {left: 245px;}
+.Ib2 {left: 314px;}
+.Ib3 {left: 383px;}
+.Ic1 {left: 476px;}
+.Ic2 {left: 545px;}
+.Ic3 {left: 614px;}
+.Iy1 {top: 16px;}
+.Iy2 {top: 84px;}
+.Iy3 {top: 152px;}
+.Iy4 {top: 220px;}
+.Iy5 {top: 289px;}
+.Iy6 {top: 357px;}
 
 .cell {
 position:absolute;
