code cleanup & other changes
- organized code and added descriptions for each function
- added option for whether the character is running or walking/standing
- stats that aren't shown on either stat page in-game are now displayed
- class selection moved to upper left and merged with the class display
- added a few new items

--- a/data/all.css
+++ b/data/all.css
@@ -43,13 +43,26 @@
 .green_name {
   text-align: center;
   color: #00f000;
-  font-weight: bold;
+/*  font-weight: bold;	*/
 }
 .gray {
   color: gray;
 }
 .background {
   background-color: black;
+}
+.dropdown_character {
+  color: #ddd;
+  position:absolute;
+  left: 68px;
+  top: 14px;
+  opacity: 0;
+  border-color: black;
+  background-color: black;
+  padding: 0px;
+  width: 97px;
+  height: 38px;
+  z-index: 4;
 }
 .dropdown {
   color: #ddd;
