--- a/data/all.css
+++ b/data/all.css
@@ -17,6 +17,16 @@
   padding: 5px;
   z-index: 5;
 }
+.hover-item {
+  position: absolute;
+  text-align: left;
+  color: white;
+  background-color: black;
+  opacity: 0.85;
+  padding: 5px;
+  z-index: 4;
+  width: 288px;
+}
 .point {
   position: absolute;
   text-align: center;
@@ -47,6 +57,7 @@
 }
 .gray {
   color: gray;
+  z-index: 3;
 }
 .background {
   background-color: black;
@@ -71,13 +82,14 @@
   width: 200px;
   height: 29px;
   border-color: #333;
-  z-index: 4;
+  z-index: 6;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
 }
-.dd {
+.dropdown-option {
   background-color: #222;
+  z-index: 6;
 /*
   margin-top: 5px;
   margin-bottom: 5px;
@@ -85,6 +97,7 @@
 }
 .dropdown:hover, .dropdown:focus {
   background-color: #222;
+  z-index: 6;
 }
 ul {
   list-style-type: none;
@@ -183,6 +196,7 @@ position:absolute;
   position: absolute;
   width: 29px;
   height: 29px;
+  z-index: 3;
   }
 .Hx1 {left: 5px;}
 .Hx2 {left: 34px;}
@@ -201,5 +215,5 @@ position:absolute;
 
 .inventory {
   width: 29px;
-  pointer-events: auto;	
+  z-index: 4;
 }
