--- a/data/all.css
+++ b/data/all.css
@@ -43,12 +43,24 @@
   color: white;
   width: 30px;
 }
+.inventory-new {
+  position: relative;
+  width: 303px;
+  height: 300px;
+  margin-right: 13px;
+  float: right;
+  z-index: 3;
+}
 .inventory {
   position: relative;
-  margin-left:11px;
-  width: 323px;
-  height: 434px;
+  margin-left:2px;
+  width: 300px;
+  height: 185px;
   float: left;
+  z-index: 3;
+}
+.inventory2 {
+  position: relative;
   z-index: 3;
 }
 .text {
