--- a/data/all.css
+++ b/data/all.css
@@ -258,3 +258,13 @@ position:absolute;
   justify-content: center;
   align-items: center;
 }
+
+input[type="file"] {
+    display: none;
+}
+.button-file {
+    border: 1px solid #ccc;
+    padding: 6px 12px;
+    cursor: pointer;
+    background-color: #eee;
+}
